<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/venue_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/venue_thumbnail_image"
            android:text="@string/venue_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/venue_thumbnail_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/venue_bookmark_image"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/thumbnail"/>
        <ImageView
            android:id="@+id/venue_bookmark_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_not_bookmarked"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/bookmark"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/venue_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venue_location"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:id="@+id/venue_categories_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venue_categories"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>
</LinearLayout>